--- a/templates/item.html
+++ b/templates/item.html
@@ -105,7 +105,7 @@
 
             img = document.createElement("img");
             name = document.createElement("span");
-            description = document.createElement("span");
+            description = document.createElement("p");
             price = document.createElement("span");
             storage = document.createElement("span");
 
@@ -118,7 +118,7 @@
             {#seller#}
             img = document.createElement("img");
             name = document.createElement("input");
-            description = document.createElement("input");
+            description = document.createElement("textarea");
             price = document.createElement("input");
             storage = document.createElement("input");
 
