--- a/templates/sellerAdd.html
+++ b/templates/sellerAdd.html
@@ -107,7 +107,7 @@
 
         {#Render INPUT description#}
         const description_div = document.createElement("div");
-        const description_input = document.createElement("input");
+        const description_input = document.createElement("textarea");
 
         description_div.setAttribute("class", "description-div");
         description_input.setAttribute("id", "description");
