--- a/templates/sellerAdd.html
+++ b/templates/sellerAdd.html
@@ -185,6 +185,27 @@
             }
         })
     }
+
+    /**
+     * This function is to upload image depend on fromdata and product id
+     * @param formdata is FormData object that contains product image
+     * @param product_id is product id
+     */
+    function upload_item_img(formdata, product_id){
+        $.ajax({
+            url:"/images/upload_image_product?product_id=" + product_id,
+            type:"post",
+            data:formdata,
+            dataType:"json",
+            processData:false,
+            contentType:false,
+            success:function (data){
+                if (!data.success) {
+                    alert(data.message);
+                }
+            }
+        })
+    }
     </script>
 {% endblock %}
 
