--- a/templates/shop.html
+++ b/templates/shop.html
@@ -36,12 +36,15 @@
 {% endblock %}
 
 {% block script %}
+    <script src="/static/js/render_item.js"></script>
     <script>
 
     let page_num = 1;
+    let item_container;
 
     {#when session is loaded#}
     $(document).on("sessionLoaded", function() {
+        item_container = $(".item-container")
 
         {#get and render item automatically#}
         get_and_render_item();
@@ -65,7 +68,7 @@
     function get_and_render_item(){
 
         {#clear DOM#}
-        $(".item-box").empty();
+        $(".item-container").empty();
 
         $.ajax({
             url: "/shop/searchItemByName",
@@ -171,79 +174,6 @@
     }
 
     /**
-     * This method is to render Products depend on products data
-     * @param data is JSON that contains items info
-     */
-    function render_item(data){
-
-        for (let i=0; i<data.length; i++){
-            {#get each item#}
-            const item = data[i];
-
-
-            {#Render DIV container #}
-            const item_box = document.createElement("div");
-            item_box.setAttribute("class", "item");
-
-
-            {#Render BUTTON item jump button#}
-            const item_button = document.createElement("button");
-
-            item_button.setAttribute("class", "item-button")
-            item_button.onclick = function (){
-                window.location.href = "/item?product_id="+ item.product_id;
-            }
-            $(".item-box").append(item_box);
-            item_box.append(item_button);
-
-
-            {#Render IMG img#}
-            const img_box = document.createElement("div");
-            const img = document.createElement("img");
-
-            img_box.setAttribute("class", "img-box");
-            img.setAttribute("src", item.image_src);
-
-            item_button.append(img_box);
-            img_box.append(img);
-
-
-            {#Rendder SPAN price#}
-            const price_box = document.createElement("div");
-            const price = document.createElement("span");
-
-            img_box.setAttribute("class", "price-box");
-            price.innerText = "Price: " + item.price;
-
-            item_box.append(price_box);
-            price_box.append(price);
-
-
-            {#Render SPAN name#}
-            const name_box = document.createElement("div");
-            const name = document.createElement("span");
-
-            img_box.setAttribute("class", "name-box");
-            name.innerText = "Name: " + item.product_name;
-
-            item_box.append(name_box);
-            name_box.append(name);
-
-
-            {#Render SPAN rating#}
-            const rating_box = document.createElement("div");
-            const rating = document.createElement("span");
-
-            img_box.setAttribute("class", "rating-box");
-            rating.innerText = "Rating: " + item.rating;
-
-            item_box.append(rating_box);
-            rating_box.append(rating);
-
-        }
-    }
-
-    /**
      * This function is to render "add" button for seller account
      */
     function render_add_button(){
@@ -292,7 +222,7 @@
 
 {% block main %}
     <div class="item-title"></div>
-    <div class="item-box"></div>
+    <div class="item-container"></div>
     <div class="prev"></div>
     <div class="next"></div>
 {% endblock %}
