--- a/static/css/shop.css
+++ b/static/css/shop.css
@@ -6,7 +6,7 @@
 /*
     The frame of each item (product).
  */
-.item-box {
+.item-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
