--- a/templates/sellerAdd.html
+++ b/templates/sellerAdd.html
@@ -17,7 +17,7 @@
     3. render_user_info (Extends)
 #}
 
-{% extends "base_personInfo.html" %}
+{% extends "base.html" %}
 
 {% block script %}
     <script>
@@ -209,6 +209,6 @@
     </script>
 {% endblock %}
 
-{% block body %}
+{% block main %}
     <div class="container"></div>
 {% endblock %}
