--- a/templates/shop.html
+++ b/templates/shop.html
@@ -186,6 +186,7 @@
      */
     function render_buyer(){
         const item_title_box = $(".item-title");
+        item_title_box.empty();
 
         const item_title_text = document.createElement("span", {
             class: "item-title-text"
@@ -199,6 +200,7 @@
      */
     function render_seller(){
         const item_title_box = $(".item-title");
+        item_title_box.empty();
 
         const item_title_text = document.createElement("span", {
             class: "item-title-text"
