--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,7 @@
     let phone;
     let type;
     let name;
+    let light_mode;
 
     window.onload = function (){
         {#alert_message("test")#}
@@ -50,17 +51,28 @@
                 phone = data.phone;
                 type = data.type;
                 name = data.name;
+                {#light_mode = data.style;#}
+                light_mode = true;
 
                 {#generate tag#}
                 const a = document.createElement("a");
                 const operation = document.createElement("a")
+                const page_style_button = document.createElement("button", {
+                    class:"page_style_button",
+                    type: "button"
+                })
+                page_style_button.onclick = function (){
+                    light_mode = !light_mode;
+                    this.innerText = light_mode?"Light Mode":"Dark Mode";
+                }
+                page_style_button.innerText = light_mode?"Light Mode":"Dark Mode";
                 if (type==="0"){
-                    a.setAttribute("href", "/sellerInfo");
+                    a.setAttribute("href", "/userInfo");
                     a.innerText = name;
                     operation.setAttribute("href", "/sellerAdd")
                     operation.innerText = "Add Item";
                 }else if(type==="1") {
-                    a.setAttribute("href", "/buyerInfo");
+                    a.setAttribute("href", "/userInfo");
                     a.innerText = name;
                     operation.setAttribute("href", "/buyerItemManage")
                     operation.innerText = "My Item";
@@ -68,8 +80,9 @@
                     a.setAttribute("href", "/login");
                     a.innerText = "Login";
                 }
-                $(".user-name").append(a)
-                $(".user-operation").append(operation)
+                $(".user-name").append(a);
+                $(".mode-button").append(page_style_button);
+                $(".user-operation").append(operation);
 
                 {#execue functions#}
                 $(document).trigger("sessionLoaded");
@@ -108,6 +121,7 @@
     <div class="search-box">
         <input type="search" id="search-box" placeholder="search" style="display: none">
     </div>
+    <div class="mode-button"></div>
 {#用户operation#}
     <div class="user-operation">
     </div>
