--- a/templates/buyerItemManage.html
+++ b/templates/buyerItemManage.html
@@ -1,10 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Manage Buyer Item</title>
-</head>
-<body>
+{% extends "base.html" %}
 
-</body>
-</html>
+{% block script %}
+    <script src="/static/js/render_purchased_items.js"></script>
+    <script>
+    let purchased_item_box;
+
+    $(document).on("sessionLoaded", function (){
+        purchased_item_box = $(".purchased-item-box");
+        get_and_render_purchased_item()
+    })
+
+    function get_and_render_purchased_item(){
+        $.ajax({
+            url:"/buyer/buyerItem",
+            type:"get",
+            data: {
+                phone:phone
+            },
+            success:function (data){
+                render_purchased_items(data)
+            }
+        })
+    }
+    </script>
+{% endblock %}
+
+{% block main %}
+    <div class="purchased-item-box"></div>
+{% endblock %}
