--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Admin</title>
     <script src="https://code.jquery.com/jquery-latest.js"></script>
+    <script src="/static/js/render_users.js"></script>
     <script>
         let page_num = 1;
 
